Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-104534

QImage received from QRenderCapture using Qt3D RHI renderer causes crash.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • None
    • 6.3.1
    • Qt3D
    • None

    Description

      With the Qt3D RHI renderer (default in Qt 6.3.1), the QImage received from QRenderCapture points to the freed address.

      Therefore, calling QImage::bits causes a crash.

      Reproduction procedure:

      1. Build and run tests/manual/rendercapture-cpp
      2. Click 'Capture' button

      The test application will crash.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            seanharmer Sean Harmer
            ayamamoto Atsushi Yamamoto
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes