RHI: fix Rhi::Renderer that creating bad QImage instance

Rhi::Renderer frees the memory referenced by QImage immediately after generating QImage.
This memory should not be freed during using QImage.

Task-number: QTBUG-104534
Change-Id: Ib17c91c1e87d7544d1bf9a836f554f351c0b3968
Reviewed-by: Mike Krus <mike.krus@kdab.com>
(cherry picked from commit e70cdcc26d51410c6b2968160c549e55f12a5a5d)
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>